:boom: ：使用注解替换默认构造方法