@@ -9,6 +9,7 @@ import com.madao.model.dto.user.UserDto;
 import com.madao.model.entity.base.OptLog;
 import com.madao.utils.BeanUtil;
 import com.madao.utils.JsonData;
+import lombok.AllArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -17,7 +18,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * @author GuoGuang
@@ -27,19 +27,12 @@ import java.util.stream.Collectors;
  * @created 2019-09-29 7:37
  */
 @Service
+@AllArgsConstructor
 public class OptLogService {
 
 	private final OptLogDao optLogDao;
 	private final OptLogMapper optLogMapper;
 	private final UserServiceRpc userServiceRpc;
-
-	public OptLogService(OptLogDao optLogDao,
-	                     OptLogMapper optLogMapper,
-	                     UserServiceRpc userServiceRpc) {
-		this.optLogDao = optLogDao;
-		this.optLogMapper = optLogMapper;
-		this.userServiceRpc = userServiceRpc;
-	}
 
 	/**
 	 * 按照条件查询全部操作日志
@@ -64,7 +57,7 @@ public class OptLogService {
 			userInfoByIds.getData().stream().flatMap(userInfo -> queryResults.getContent().stream()
 							.filter(articleId -> StringUtils.equals(userInfo.getId(), articleId.getUserId()))
 							.peek(articleId -> articleId.setUserName(userInfo.getUserName())))
-					.collect(Collectors.toList());
+					.toList();
 		}
 		return queryResults;
 	}
