@@ -9,14 +9,13 @@ import com.madao.user.dao.ResourceDao;
 import com.madao.user.dao.RoleResourceDao;
 import com.madao.user.mapper.ResourceMapper;
 import com.madao.utils.RedisUtil;
+import lombok.AllArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 
 import javax.persistence.criteria.Predicate;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * @author GuoGuang
@@ -26,22 +25,13 @@ import java.util.stream.Collectors;
  * @created 2019-09-29 7:37
  */
 @Service
+@AllArgsConstructor
 public class ResourceService {
 
 	private final ResourceDao resourceDao;
 	private final ResourceMapper resourceMapper;
 	private final RoleResourceDao roleResourceDao;
 	private final RedisUtil redisUtil;
-
-	@Autowired
-	public ResourceService(ResourceDao resourceDao,
-	                       RoleResourceDao roleResourceDao,
-	                       ResourceMapper resourceMapper, RedisUtil redisUtil) {
-		this.resourceDao = resourceDao;
-		this.roleResourceDao = roleResourceDao;
-		this.resourceMapper = resourceMapper;
-		this.redisUtil = redisUtil;
-	}
 
 	/**
 	 * 条件查询资源
@@ -81,7 +71,7 @@ public class ResourceService {
 
 		List<RoleResource> roleResources = resourceDto.getRoles().stream()
 				.map(resource -> new RoleResource(resource.getId(), resourceDto.getId()))
-				.collect(Collectors.toList());
+				.toList();
 
 		roleResourceDao.deleteByRoleIdIn(Collections.singletonList(resourceDto.getId()));
 		roleResourceDao.saveAll(roleResources);
